package com.grupo.learningmore.domain.assignment;

public enum SubmissionStatus {
    PENDING,
    GRADED,
    LATE
}
