package com.grupo.learningmore.user.domain;

public enum UserRole {
    ADMIN,
    PROFESSOR,
    STUDENT
}
